[gd_scene load_steps=10 format=3 uid="uid://nutwb7ivdl7e"]

[ext_resource type="Script" uid="uid://bu6iddnt2t3hk" path="res://scripts/units/unit.gd" id="1_btf8p"]
[ext_resource type="Script" uid="uid://d11jmh7flvcad" path="res://scripts/units/distance_line.gd" id="2_bork7"]
[ext_resource type="Texture2D" uid="uid://dtpa1tam2fmgh" path="res://icon.svg" id="2_hwtar"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="4_f2ita"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="5_hix5a"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="6_fh57n"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="7_hix5a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_btf8p"]
size = Vector2(40, 40)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_b3y04"]
b = Vector2(0, 0)

[node name="Unit" type="Area2D"]
script = ExtResource("1_btf8p")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
self_modulate = Color(0.352941, 1, 0, 1)
scale = Vector2(0.308594, 0.308594)
texture = ExtResource("2_hwtar")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_btf8p")

[node name="Container Container" type="VBoxContainer" parent="."]
offset_left = -20.0
offset_top = 21.0
offset_right = 20.0
offset_bottom = 125.0

[node name="Label Container" type="VBoxContainer" parent="Container Container"]
layout_mode = 2

[node name="Health Label" type="Label" parent="Container Container/Label Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Move Points Label" type="Label" parent="Container Container/Label Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Action Points Label" type="Label" parent="Container Container/Label Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Distance Label Container" type="VBoxContainer" parent="Container Container"]
layout_mode = 2

[node name="Warning Label" type="Label" parent="Container Container/Distance Label Container" groups=["Unit Distance Info"]]
unique_name_in_owner = true
self_modulate = Color(1, 0, 0, 1)
layout_mode = 2

[node name="Distance Label" type="Label" parent="Container Container/Distance Label Container" groups=["Unit Distance Info"]]
unique_name_in_owner = true
layout_mode = 2

[node name="Distance Line" type="Line2D" parent="." groups=["Unit Distance Info"]]
visible = false
points = PackedVector2Array(0, 0, 0, 0)
width = 5.0
script = ExtResource("2_bork7")

[node name="Distance Line Collision" type="Area2D" parent="Distance Line"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Distance Line/Distance Line Collision"]
shape = SubResource("SegmentShape2D_b3y04")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("4_f2ita")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("5_hix5a")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("6_fh57n")

[node name="Moving" type="Node" parent="StateChart/CompoundState/Idle"]
script = ExtResource("7_hix5a")
to = NodePath("../../Moving")
event = &"moving"
delay_in_seconds = "0.0"

[node name="Attacking" type="Node" parent="StateChart/CompoundState/Idle"]
script = ExtResource("7_hix5a")
to = NodePath("../../Attacking")
event = &"attacking"
delay_in_seconds = "0.0"

[node name="Healing" type="Node" parent="StateChart/CompoundState/Idle"]
script = ExtResource("7_hix5a")
to = NodePath("../../Healing")
event = &"healing"
delay_in_seconds = "0.0"

[node name="Moving" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("6_fh57n")

[node name="Idle" type="Node" parent="StateChart/CompoundState/Moving"]
script = ExtResource("7_hix5a")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="Attacking" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("6_fh57n")

[node name="Idle" type="Node" parent="StateChart/CompoundState/Attacking"]
script = ExtResource("7_hix5a")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="Healing" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("6_fh57n")

[node name="Idle" type="Node" parent="StateChart/CompoundState/Healing"]
script = ExtResource("7_hix5a")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="area_entered" from="Distance Line/Distance Line Collision" to="." method="_on_distance_line_collision_area_entered"]
[connection signal="area_exited" from="Distance Line/Distance Line Collision" to="." method="_on_distance_line_collision_area_exited"]
[connection signal="state_input" from="StateChart/CompoundState/Idle" to="." method="_on_idle_state_input"]
[connection signal="state_input" from="StateChart/CompoundState/Moving" to="." method="_on_moving_state_input"]
[connection signal="state_processing" from="StateChart/CompoundState/Moving" to="." method="_on_moving_state_processing"]
[connection signal="state_input" from="StateChart/CompoundState/Attacking" to="." method="_on_attacking_state_input"]
[connection signal="state_processing" from="StateChart/CompoundState/Attacking" to="." method="_on_attacking_state_processing"]
[connection signal="state_input" from="StateChart/CompoundState/Healing" to="." method="_on_healing_state_input"]
[connection signal="state_processing" from="StateChart/CompoundState/Healing" to="." method="_on_healing_state_processing"]
